# se

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: .clang-format  .doxyfile.in  CMakeLists.txt  linux-cmake-build.sh  mingw-cmake-build.cmd
src/cmake/module/: build_library.cmake  check_type_size.cmake  collect_compile_options.cmake  collect_library_options.cmake  collect_source_files.cmake  compile_definitions.cmake  environment_paths.cmake  generate_doxygen.cmake  include_compile_options.cmake  parse_version.cmake  sync_msvc_crt_build.cmake  sync_static_build_option.cmake
src/cmake/options/: clear_options.cmake  compiler_common_options.cmake  compiler_debug_options.cmake  compiler_release_options.cmake  library_options.cmake
src/inc/se/: addr.h  addr_util.h  attribute.h  attribute_force_inline.h  attribute_noreturn.h  attribute_symbol.h  attribute_target.h  attribute_thread_local.h  attribute_unused.h  bit_util.h  bool.h  compiler.h  compiler_attribute.h  compiler_attribute_noreturn.h  compiler_attribute_symbol.h  compiler_attribute_target.h  compiler_attribute_thread_local.h  compiler_attribute_unused.h  compiler_bit_depth.h  compiler_destructor.h  compiler_extern.h  compiler_std_version.h  compiler_type.h  compiler_unreachable.h  compiler_version.h  elif.h  error.h  error_code.h  exception.h  exception_catch.h  exception_trace.h  interval_util.h  intptr.h  jump_buffer.h  memory.h  memory_allocator_alloc_fn.h  memory_allocator_dealloc_fn.h  memory_range.h  memory_raw.h  memory_std.h  (+24 more)
src/inc/se/attribute/: attribute.h  attribute_symbol.h  attribute_target.h  attribute_thread_local.h
src/inc/se/compiler/: compiler.h  compiler_attribute.h  compiler_attribute_builtin.h  compiler_attribute_force_inline.h  compiler_attribute_target.h  compiler_attribute_thread_local.h  compiler_constructor.h  compiler_destructor.h  compiler_extern_c.h
src/inc/se/core/: addr.h  addr_util.h  bool.h  (+16 more)
src/src/se/: error.c  memory.c  memory_raw.c  memory_std.c  memory_view.c  runtime_exception_catch_stack.c  runtime_terminate.c  version.c
tests/: CMakeLists.txt
tests/src/: error.cpp  memory_raw.cpp  memory_view.cpp  numeric_limits.cpp
(+42 files in other folders)
